--- a/package.json
+++ b/package.json
@@ -1,54 +1,43 @@
 {
-  "name": "rush-3d-game",
+  "name": "rolling-ball-3d",
   "version": "1.0.0",
-  "description": "Professional 3D endless runner game inspired by Rush - Built with Three.js",
-  "main": "game.js",
-  "scripts": {
-    "start": "python -m http.server 8000",
-    "serve": "live-server --port=8080",
-    "dev": "live-server --port=3000 --open=index.html"
+  "description": "A 3D rolling ball game with dynamic paths and speed progression",
+  "private": true,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/rush-3d-game.git"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "keywords": [
     "game",
     "3d",
-    "threejs",
-    "webgl",
-    "rush",
-    "endless-runner",
-    "javascript",
-    "html5",
-    "browser-game",
-    "mobile-game",
-    "casual-game",
-    "ketchapp",
-    "three.js",
-    "webgame"
+    "rolling-ball",
+    "react",
+    "javascript"
   ],
-  "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com",
-    "url": "https://yourwebsite.com"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/yourusername/rush-3d-game/issues"
-  },
-  "homepage": "https://github.com/yourusername/rush-3d-game#readme",
-  "engines": {
-    "node": ">=12.0.0",
-    "npm": ">=6.0.0"
-  },
-  "devDependencies": {
-    "live-server": "^1.2.1"
-  },
-  "dependencies": {},
-  "browserslist": [
-    "last 2 versions",
-    "> 1%",
-    "not dead"
-  ]
+  "author": "Your Name",
+  "license": "MIT"
 }
